--- a/styles/global.css
+++ b/styles/global.css
@@ -35,3 +35,11 @@ img {
   max-width: 100%;
   display: block;
 }
+
+table {
+  border-spacing:0;
+}
+th, td {
+  border: 1px solid #555;
+  padding: 10px;
+}
