--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,23 +1,16 @@
-.heading2Xl {
-    font-size: 2.5rem;
-    line-height: 1.2;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-  }
-  
   .headingXl {
-    font-size: 2rem;
+    font-size: 2.0625rem;
     line-height: 1.3;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
+    font-weight: 700;
     margin: 1rem 0;
   }
   
   .headingLg {
-    font-size: 1.5rem;
-    line-height: 1.4;
+    font-size: 1.75rem;
+    line-height: 1.25;
+    font-weight: 700;
     margin: 1rem 0;
+    margin-bottom: -10px;
   }
   
   .headingMd {
