--- a/styles/global.css
+++ b/styles/global.css
@@ -35,15 +35,23 @@ a:hover {
 }
 
 img {
-  max-width: 100%;
+  min-width: 40%;
+  max-width: 70%;
   display: block;
+}
+
+pre {
+  min-width: 40%;
+  max-width: 70%;
 }
 
 table {
   border-spacing:0;
+  max-width: 70%;
 }
 
 th, td {
   border: 1px solid #555;
   padding: 10px;
+  text-align:left;
 }
