--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,4 +1,10 @@
-  .headingXl {
+.container {
+  max-width: 75rem;
+  padding: 0 1rem;
+  margin: 3rem auto 6rem;
+}
+
+.headingXl {
     font-size: 2.0625rem;
     line-height: 1.3;
     font-weight: 700;
