--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -5,7 +5,19 @@
 }
 
 .article {
-    max-width: 80%;
+    max-width: 70%;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -10px;
+}
+
+.navbarHeader {
+    margin-left: 1rem;
 }
 
 .headingXl {
@@ -13,6 +25,7 @@
     line-height: 1.3;
     font-weight: 700;
     margin: 1rem 0;
+    margin-top: 40px;
 }
   
 .headingLg {
@@ -20,12 +33,13 @@
     line-height: 1.25;
     font-weight: 700;
     margin: 1rem 0;
-    margin-bottom: -10px;
+    margin-bottom: -15px;
 }
 
 .headingMd {
     font-size: 1.2rem;
     line-height: 1.5;
+    margin-bottom: -5px;
 }
 
 .padding1px {
@@ -40,5 +54,13 @@
 {
     .article {
         max-width: 100%;
+    }
+
+    .navbar {
+        position: relative;
+    }
+
+    .navbarHeader {
+        margin-left: 0rem;
     }
 }
