--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,12 +4,8 @@
     margin: 3rem auto 6rem;
 }
 
-.article {
-    max-width: 70%;
-}
-
 .navbar {
-    position: fixed;
+    position: absolute;  
     top: 0;
     right: 0;
     margin-right: 1rem;
@@ -52,7 +48,7 @@
     padding-top: 1px;
 }
 
-@media all and (max-width: 768px)
+@media all and (max-width: 1000px)
 {
     .article {
         max-width: 100%;
