--- a/styles/global.css
+++ b/styles/global.css
@@ -1,30 +1,36 @@
-html,
+h1 {
+    font-family: Montserrat, sans-serif;
+}
+
+h2 {
+    font-family: Montserrat, sans-serif;
+}
+
+h3 {
+    font-family: Montserrat, sans-serif;
+    margin-top: 2em;
+}
+
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Merriweather, Georgia, serif;
+    font-family: Merriweather, serif;
     line-height: 1.5;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
-h1 {
-    font-family: Montserrat, "Helvetica Neue", sans-serif;
-}
-h2 {
-    font-family: Montserrat, "Helvetica Neue", sans-serif;
-}
-h3 {
-    font-family: Montserrat, "Helvetica Neue", sans-serif;
-    font-size: 1.5rem;
-    font-weight: 700;
-    line-height: 1.1;
-    margin-top: 2em;
-    margin-bottom: 1em;
+
+table {
+    border-spacing:0;
 }
 
-* {
-    box-sizing: border-box;
+th, td {
+    border: 1px solid #555;
+    padding: 10px;
+    text-align:left;
+}
+
+pre {
+    min-width: 50%;
 }
 
 a {
@@ -42,29 +48,17 @@ img {
     display: block;
 }
 
-table {
-    border-spacing:0;
-}
-
-th, td {
-    border: 1px solid #555;
-    padding: 10px;
-    text-align:left;
-}
-
-pre {
-    min-width: 50%;
-}
-
 @media all and (max-width: 768px)
 {
-    img {
-        max-width: 100%;
-    }
     table {
         max-width: 100%;
     }
+
     pre {
+        max-width: 100%;
+    }
+
+    img {
         max-width: 100%;
     }
 }
