--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -17,7 +17,7 @@
 
 .subHeadingText {
     font-size: 1rem;
-    color: #666;
+    color: gray;
     margin-top: -20px;
     margin-bottom: 50px;
 }
