--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,16 @@
 h1 {
     font-family: Montserrat, sans-serif;
+    font-size: 2.5rem;
 }
 
 h2 {
     font-family: Montserrat, sans-serif;
+    font-size: 1.8rem;
 }
 
 h3 {
     font-family: Montserrat, sans-serif;
+    font-size: 1.5rem;
     margin-top: 2em;
 }
 
@@ -52,6 +55,18 @@ img {
 
 @media all and (max-width: 768px)
 {
+    h1 {
+        font-size: 1.7rem;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+    }
+
+    h3 {
+        font-size: 1.3rem;
+    }
+
     table {
         max-width: 100%;
     }
